# rtgp-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  benchmarks.cpp  main.cpp  vcpkg.json
imguizmo/imGuIZMO.quat/: vgConfig.h
include/utils/: directions.h  nocopy.h  random_utils.h
src/: applytextureshader.h  camera.h  debugbuffer.h  disappearingobject.h  input.h  renderer.h  renderobject.h  scene.h  sceneobject.h  solidcolorshader.h  texturedmodel.h
src/gpuobjects/: framebuffer.h  mesh.h  model.h  particles.h  pboreadbuffer.h  shader.h  texture.h
src/shaders/: apply_texture.frag  apply_texture.vert  basic.vert  basic_particle.vert  billboard_particle.frag  billboard_particle.vert  debug_buffer.frag  disappearing_mesh.frag  particle_quad.frag  particle_quad.vert  solid_color.frag
